# agentic_python_template

./: .gitignore  CLEANUP_SUMMARY.md  README.md  pyproject.toml  requirements.txt
.claude/commands/: architect.md  customer.md  developer.md  devops.md  documentation.md  mlops.md  portfolio.md  product.md  project.md  research.md  reviewer.md  scrum.md  task.md  tester.md  triage.md  ux.md
.claude/rules/: project.md
.claude/tasks/: taskboard.md
.github/workflows/: template-validation.yml
docs/: architecture.md  getting-started.md
scripts/: adaptive-workflow.sh  agent-task.sh  audit-summary.sh  cleanup-plan.md  full-audit.sh  launch-agent.sh  launch-architect.sh  launch-developer.sh  launch-devops.sh  launch-documentation.sh  launch-mlops.sh  launch-product.sh  launch-reviewer.sh  launch-scrum.sh  launch-tester.sh  launch-triage.sh  meeting.sh  orchestrate-parallel.sh  orchestrate.sh  secure-temp.sh  security-fixes.sh  setup-agents.sh  simulate-audit.sh  spawn-agent.sh  taskboard-helper.py  update-taskboard.sh  validate-template.sh
src/: __init__.py
src/api/: __init__.py
src/models/: __init__.py
src/services/: __init__.py
src/utils/: __init__.py
tests/: __init__.py
tests/example/: test_example.py
tests/scripts/: test-orchestration.sh
tests/template/: prompt_baseline.json  test_adaptive_workflow.py  test_agents.py  test_orchestration.py  validate_prompts.py
